added css and other updates

--- a/index.html
+++ b/index.html
@@ -8,20 +8,28 @@
         table,
         th,
         td {
-            border: 1px solid black;
+            border: 1px solid rgb(255, 255, 255);
             border-radius: 4px;
             text-align: center;
             border-collapse: collapse;
+            color: white;
+        }
+        h3, h2{
+            color: white;
+        }
+        *
+        {
+            background-color: rgb(40, 40, 40);
         }
     </style>
 </head>
 <body>
     <center>
-        <h3>Pandit Deendayal Energy University</h3>
-        <h4>School of Technology</h4>
-        <h4>B.Tech - Information and Communication Technology</h4>
-        <h4>Semester : 6 (2)</h4>
-        <table style="font-size: small;">
+        <h2>Pandit Deendayal Energy University</h2>
+        <h3>School of Technology</h3>
+        <h3>B.Tech - Information and Communication Technology</h3>
+        <h3>Semester : 6 (2)</h3>
+        <table style="height: 400px;">
             <caption><h4>Time Table</h4></caption>
             <tr>
                 <th>Day</th>
@@ -46,7 +54,7 @@
                 <td>H4H5H6 (20IC304T) E201, ARSO-L</td>
                 <td></td>
                 <td></td>
-                <td rowspan="5" bgcolor = "yellow">Short Break</td>
+                <td rowspan="5" bgcolor="yellow">Short Break</td>
                 <td></td>
                 <td></td>
             </tr>
