--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             text-align: center;
             border-collapse: collapse;
         }
+        body{
+            background-color: rgb(216, 255, 254);
+        }
         
     </style>
 </head>
